# Sonnenstrahlung

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  autopredict.py  deploy.sh  linting.md  poetry.toml  predict.py  predict.txt  pyproject.toml  requirements.txt  train.py
.dvc/: config
data/: .gitignore  SolarPrediction.csv.dvc
experiments/: exp_v1.ipynb
service/: app.py  regressor.py
